--- a/src/gui/packaging/reports/PACKAGING_UI0019_EfficiencyCalculation_JPANEL.form
+++ b/src/gui/packaging/reports/PACKAGING_UI0019_EfficiencyCalculation_JPANEL.form
@@ -415,6 +415,9 @@
           <SubComponents>
             <Component class="javax.swing.JRadioButton" name="radio_scanned_harness">
               <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Calibri" size="18" style="0"/>
+                </Property>
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
@@ -428,6 +431,9 @@
             </Component>
             <Component class="javax.swing.JRadioButton" name="radio_stored_pack">
               <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Calibri" size="18" style="0"/>
+                </Property>
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
@@ -440,7 +446,7 @@
             <Component class="javax.swing.JRadioButton" name="radio_closed_pack">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Dialog" size="11" style="1"/>
+                  <Font name="Calibri" size="18" style="0"/>
                 </Property>
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
